채팅기능추가

--- a/index.html
+++ b/index.html
@@ -13,15 +13,43 @@
   </ol>
 
   <h2>오늘의 공부일기</h2>
-  <p><a href="https://search.naver.com/" target="_blank" title="네이버시간">2020.05.27</a> <strong><u>html</u> 공부</strong> <br>생활코딩 시청하기
-<ul>
-  <li>p 태그는 문단을 나누고 br은 단순한 줄바꿈 p가 더좋음!!</li>
-  <li>img src ="이미지.확장자" 같이 묶어서 이미지를 달 수 있음!!</li>
-  <li>ol:orderd list 숫자 / ul: unoderd list 숫자 x 이 태그의 특징은 부모자식 태그 list가 들어감</li>
-  <li>a는 앵커의 약자로 닻을 내린다임 하이퍼링크(h:하이퍼링크 ref:레퍼런스) target은 새창열기 title은 소개</li>
-</ul>
+  <p>
+    <a href="https://search.naver.com/" target="_blank" title="네이버시간">2020.05.27</a> <strong><u>html</u> 공부</strong> <br>생활코딩 시청하기
+  <ul>
+    <li>p 태그는 문단을 나누고 br은 단순한 줄바꿈 p가 더좋음!!</li>
+    <li>img src ="이미지.확장자" 같이 묶어서 이미지를 달 수 있음!!</li>
+    <li>ol:orderd list 숫자 / ul: unoderd list 숫자 x 이 태그의 특징은 부모자식 태그 list가 들어감</li>
+    <li>a는 앵커의 약자로 닻을 내린다임 하이퍼링크(h:하이퍼링크 ref:레퍼런스) target은 새창열기 title은 소개</li>
+  </ul>
   </p>
   <img src="예제 이미지1.jpg" width="100%">
-  <p style="margin-top:30px;">2020.05.28</p>
+  <p>
+    <iframe width="829" height="466" src="https://www.youtube.com/embed/7T7r_oSp0SE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
+  <p>
+    <div id="disqus_thread"></div>
+    <script>
+
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-qgbnmnpzwe.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </p>
+  <p style="margin-top:30px;">2020.05.28
+  <br><input type="checkbox">
+  </p>
 </body>
 </html>
